agrege contador de cada producto  al carrito (no la cantidad)

--- a/style.css
+++ b/style.css
@@ -162,3 +162,16 @@ body {
 .delete-product {
     cursor: pointer;
 }
+
+/*CarritoCounter*/
+.cantidad-carrito {
+    background-color: #930808;
+    color: white;
+    border-radius: 50%;
+    font-size: 12px;
+    padding: 4px;
+    top: 37px;
+    right: 14px;
+    position: absolute;
+    display: none;
+}
