--- a/style.css
+++ b/style.css
@@ -175,3 +175,11 @@ body {
     position: absolute;
     display: none;
 }
+
+.sumar {
+    cursor: pointer;
+}
+
+.restar {
+    cursor: pointer;
+}
