--- a/style.css
+++ b/style.css
@@ -152,15 +152,19 @@ body {
 }
 
 .total-content {
+    background-color: #930808;
     font-size: 25px;
-    padding: 20px;
+    margin-bottom: 10px;
+    padding: 15px;
     text-align: center;
     padding-top: 20px;
+    cursor: pointer;
 }
 
 /*delete button product*/
 .delete-product {
     cursor: pointer;
+    font-size: 20px;
 }
 
 /*CarritoCounter*/
@@ -170,16 +174,18 @@ body {
     border-radius: 50%;
     font-size: 12px;
     padding: 4px;
-    top: 37px;
-    right: 14px;
+    top: 80px;
+    right: 25px;
     position: absolute;
     display: none;
 }
 
 .sumar {
+    font-size: 20px;
     cursor: pointer;
 }
 
 .restar {
+    font-size: 20px;
     cursor: pointer;
 }
