--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     margin: 0px;
+    background-color: #aa1414;
 }
 
 /*navbar*/
@@ -69,6 +70,7 @@ body {
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     border: #1b1b1b;
+    background-color: white;
 }
 
 .card  img {
