--- a/style.css
+++ b/style.css
@@ -165,13 +165,12 @@ body {
 }
 
 .total-content {
-    background-color: #900505cf;
+    background-color: #390303;
     font-size: 25px;
     margin-bottom: 5px;
     padding: 15px;
     text-align: center;
     padding-top: 10px;
-    cursor: pointer;
 }
 
 /*delete button product*/
@@ -182,7 +181,7 @@ body {
 
 /*CarritoCounter*/
 .cantidad-carrito {
-    background-color: #930808;
+    background-color: #390303;
     color: white;
     border-radius: 50%;
     font-size: 12px;
@@ -195,13 +194,14 @@ body {
 
 /*vaciar carrito */
 .mi-boton {
-    background-color: #900505cf;
+    background-color: #390303;
     font-size: 25px;
     margin-bottom: 10px;
     padding: 15px;
     text-align: center;
     padding-top: 10px;
     cursor: pointer;
+    color: white;
 }
 
 .sumar {
@@ -224,4 +224,16 @@ body {
     text-transform: uppercase;
     transition: background-color 0.3s ease;
     cursor: pointer;
+}
+
+.footer-tienda {
+    border-top: 2px solid black;
+    text-align: center;
+    background-color: #2d0e1b;
+   
+    }
+
+.footer-tienda h2 {
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
